[add] order&animal swagger
